We add the add phone functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,12 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <nav>
+      <a routerLink="/phones">Get Phones</a>
+  </nav>
+  <nav>
+      <a routerLink="/addphone">Add a new Phone</a>
+  </nav>
 </div>
-<app-phones></app-phones>
+<router-outlet></router-outlet>
 
