--- a/src/app/phones/phones.component.html
+++ b/src/app/phones/phones.component.html
@@ -17,3 +17,15 @@
     </label>
   </div>
 </div>
+
+<div>
+    <label>id:
+      <input (keyup)="onKey($event)" placeholder="id">
+    </label>
+  </div>
+<div>
+  <span> id: </span>{{idphone.id}}
+  <span>  name: </span>{{idphone.name}}
+  <span>  price: </span>{{idphone.price}}
+</div>
+  
