--- a/src/app/phones/phones.component.html
+++ b/src/app/phones/phones.component.html
@@ -23,7 +23,7 @@
       <input (keyup)="onKey($event)" placeholder="id">
     </label>
   </div>
-<div>
+<div *ngIf="idphone">
   <span> id: </span>{{idphone.id}}
   <span>  name: </span>{{idphone.name}}
   <span>  price: </span>{{idphone.price}}
