--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,3 +20,13 @@ h1 {
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  .my-form{
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+   
+  .full-width {
+    width: 100%;
+  }
