--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,3 @@
-<mat-toolbar>
-    <span>LOGIN</span>
-</mat-toolbar>
 <mat-card class="my-card">
     <mat-card-content>
         <form class="my-form">
@@ -8,13 +5,13 @@
               <tr><td>
                   <mat-form-field class="full-width">
                     <mat-label>Username</mat-label>
-                    <input  matInput  placeholder="Username" name="user.username" [(ngModel)]="user.username" >
+                    <input type="text" matInput  placeholder="Username" name="user.username" [(ngModel)]="user.username" >
                   </mat-form-field>
               </td></tr>
               <tr><td>
                   <mat-form-field class="full-width">
                     <mat-label>Password</mat-label>
-                    <input  matInput  placeholder="Password" name="user.password" [(ngModel)]="user.password">
+                    <input type="text" matInput  placeholder="Password" name="user.password" [(ngModel)]="user.password">
                   </mat-form-field>
               </td></tr>
             </table>
