--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,15 @@
 <mat-card class="my-card">
     <mat-card-content>
-        <form class="my-form">
-            <table class="example-full-width" cellspacing="0">
+        <form >
+            <table class="login-table" cellspacing="0">
               <tr><td>
-                  <mat-form-field class="full-width">
+                  <mat-form-field class="field-width">
                     <mat-label>Username</mat-label>
                     <input type="text" matInput  placeholder="Username" name="user.username" [(ngModel)]="user.username" >
                   </mat-form-field>
               </td></tr>
               <tr><td>
-                  <mat-form-field class="full-width">
+                  <mat-form-field class="field-width">
                     <mat-label>Password</mat-label>
                     <input type="text" matInput  placeholder="Password" name="user.password" [(ngModel)]="user.password">
                   </mat-form-field>
