--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,6 +19,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button (click)="login()" color="primary">Login</button>
+      <button mat-raised-button (click)="register()" color="primary">Register</button>
     </mat-card-actions>
 </mat-card>
 
